--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header{
 }
 
 .logo-img{
-    width: 80px;
+    width: 100px;
     height: auto;
     transition: 0.5s;
     cursor: pointer;
@@ -242,21 +242,14 @@ footer{
     font-weight: lighter;
 } 
 
-@media(min-width: 680px) and (max-width: 1000px){
+@media (max-width: 1000px){
     .modal-content{
         width: 45vw;
         height: auto;
     }
 }
 
-@media(min-width: 590px) and (max-width: 679px){
-    .modal-content{
-        width: 45vw;
-        height: auto;
-    }
-}
-
-@media(min-width: 465px) and (max-width: 589px){
+@media (max-width: 589px){
         .modal-content{
             width: 45vw;
             height: auto;
